// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SvgIcon demo -- svgIcon 1`] = `
.emotion-134 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-134 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-89 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-89:before,
.emotion-89:after {
  content: ' ';
  display: table;
}

.emotion-89:after {
  clear: both;
}

.emotion-89 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-86 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-86 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-83 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-83 .uc-fe-radio-styletype-default,
.emotion-83 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-83 .uc-fe-radio-styletype-default:last-child,
.emotion-83 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-83 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-83 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-83 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-83 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-83 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-83 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-6 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-6 > * {
  font-size: 12px;
}

.emotion-6 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-6 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-6 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-6:hover .uc-fe-radio-icon-wrap,
.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-6.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-6.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-104 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-104:hover {
  border-color: #3357df;
}

.emotion-104:hover .emotion-101 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-104 .emotion-101 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-104 .emotion-99 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-104 .emotion-103 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-104 .emotion-95,
.emotion-104 .emotion-97 {
  line-height: 16px;
}

.emotion-104 .emotion-95 {
  padding-right: 20px;
}

.emotion-104 .emotion-97 {
  padding-left: 20px;
}

.emotion-104 .emotion-95 {
  display: none;
}

.emotion-102 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-94 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-96 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-100 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-98 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-117 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-117.uc-fe-input-block {
  display: block;
}

.emotion-117 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-117 input,
.emotion-117 input:hover,
.emotion-117 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-117:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-117 input {
  line-height: 26px;
  height: 26px;
}

.emotion-117 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-117 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-117 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-117 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-115 {
  display: table;
  width: 100%;
}

.emotion-136 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: #333333;
  width: 12px;
  height: 12px;
}

.emotion-134 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-134 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-89 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-89:before,
.emotion-89:after {
  content: ' ';
  display: table;
}

.emotion-89:after {
  clear: both;
}

.emotion-89 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-86 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-86 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-83 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-83 .uc-fe-radio-styletype-default,
.emotion-83 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-83 .uc-fe-radio-styletype-default:last-child,
.emotion-83 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-83 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-83 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-83 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-83 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-83 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-83 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-6 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-6 > * {
  font-size: 12px;
}

.emotion-6 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-6 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-6 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-6:hover .uc-fe-radio-icon-wrap,
.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-6.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-6.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-104 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-104:hover {
  border-color: #3357df;
}

.emotion-104:hover .emotion-101 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-104 .emotion-101 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-104 .emotion-99 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-104 .emotion-103 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-104 .emotion-95,
.emotion-104 .emotion-97 {
  line-height: 16px;
}

.emotion-104 .emotion-95 {
  padding-right: 20px;
}

.emotion-104 .emotion-97 {
  padding-left: 20px;
}

.emotion-104 .emotion-95 {
  display: none;
}

.emotion-102 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-94 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-96 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-100 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-98 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-117 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-117.uc-fe-input-block {
  display: block;
}

.emotion-117 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-117 input,
.emotion-117 input:hover,
.emotion-117 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-117:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-117 input {
  line-height: 26px;
  height: 26px;
}

.emotion-117 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-117 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-117 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-117 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-115 {
  display: table;
  width: 100%;
}

.emotion-136 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: #333333;
  width: 12px;
  height: 12px;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-134 emotion-135"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-88 emotion-89 emotion-90"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        type
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-85 emotion-86 emotion-2"
        span="9"
      >
        <div
          class="emotion-83 emotion-72"
        >
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              tick
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              cross
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              boldCross
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              ringLoading
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              dottedRightLineArrow
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              circleExclamation
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              plus
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              minus
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              circle
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              smallTick
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              horz
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              leftArrow
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              rightArrow
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              refresh
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              trash
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              eye
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-88 emotion-89 emotion-90"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        spin
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-85 emotion-86 emotion-2"
        span="9"
      >
        <div
          class=" emotion-104 emotion-105"
        >
          <div
            class="emotion-102 emotion-103"
          >
            <span
              class="emotion-94 emotion-95"
            >
              ON
            </span>
            <span
              class="emotion-96 emotion-97"
            >
              OFF
            </span>
            <span
              class="emotion-100 emotion-101"
            >
              <span
                class="emotion-98 emotion-99"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-88 emotion-89 emotion-90"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-85 emotion-86 emotion-2"
        span="9"
      >
        <span
          class="uc-fe-input emotion-117 emotion-118"
        >
          <span
            class="emotion-115 emotion-116"
          >
            <input
              value="12px"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-88 emotion-89 emotion-90"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        color
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-85 emotion-86 emotion-2"
        span="9"
      >
        <input
          type="color"
          value="#333333"
        />
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <svg
      class=" emotion-136 emotion-4"
      color="#333333"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.23 5.52a1 1 0 011.62 1.16l-.08.11-9.93 12.07a1 1 0 01-1.33.19l-.1-.05-6.07-5.38A1 1 0 014.56 12l.1.08L10 16.79z"
      />
    </svg>
  </div>
</div>
`;

exports[`SvgIcon demo -- svgIcon-color 1`] = `
.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: black;
  width: 12px;
  height: 12px;
}

.emotion-2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: white;
  width: 12px;
  height: 12px;
}

.emotion-4 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: red;
  width: 12px;
  height: 12px;
}

.emotion-6 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: green;
  width: 12px;
  height: 12px;
}

.emotion-8 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: blue;
  width: 12px;
  height: 12px;
}

.emotion-10 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: purple;
  width: 12px;
  height: 12px;
}

.emotion-12 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: #18E1c9;
  width: 12px;
  height: 12px;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: black;
  width: 12px;
  height: 12px;
}

.emotion-2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: white;
  width: 12px;
  height: 12px;
}

.emotion-4 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: red;
  width: 12px;
  height: 12px;
}

.emotion-6 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: green;
  width: 12px;
  height: 12px;
}

.emotion-8 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: blue;
  width: 12px;
  height: 12px;
}

.emotion-10 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: purple;
  width: 12px;
  height: 12px;
}

.emotion-12 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: #18E1c9;
  width: 12px;
  height: 12px;
}

<div>
  <svg
    class=" emotion-0 emotion-1"
    color="black"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
    />
  </svg>
  <svg
    class=" emotion-2 emotion-1"
    color="white"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
    />
  </svg>
  <svg
    class=" emotion-4 emotion-1"
    color="red"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
    />
  </svg>
  <svg
    class=" emotion-6 emotion-1"
    color="green"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
    />
  </svg>
  <svg
    class=" emotion-8 emotion-1"
    color="blue"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
    />
  </svg>
  <svg
    class=" emotion-10 emotion-1"
    color="purple"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
    />
  </svg>
  <svg
    class=" emotion-12 emotion-1"
    color="#18E1c9"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
    />
  </svg>
</div>
`;

exports[`SvgIcon demo -- svgIcon-size 1`] = `
.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

.emotion-2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 16px;
  height: 16px;
}

.emotion-4 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 30px;
  height: 30px;
}

.emotion-6 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 2em;
  height: 2em;
}

.emotion-8 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 3rem;
  height: 3rem;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

.emotion-2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 16px;
  height: 16px;
}

.emotion-4 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 30px;
  height: 30px;
}

.emotion-6 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 2em;
  height: 2em;
}

.emotion-8 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 3rem;
  height: 3rem;
}

<div>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
    />
  </svg>
  <svg
    class=" emotion-2 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
    />
  </svg>
  <svg
    class=" emotion-4 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
    />
  </svg>
  <svg
    class=" emotion-6 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
    />
  </svg>
  <svg
    class=" emotion-8 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
    />
  </svg>
</div>
`;

exports[`SvgIcon demo -- svgIcon-spin 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
  -webkit-animation: animation-0 1.2s infinite linear;
  animation: animation-0 1.2s infinite linear;
}

@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
  -webkit-animation: animation-0 1.2s infinite linear;
  animation: animation-0 1.2s infinite linear;
}

<div>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.23 5.52a1 1 0 011.62 1.16l-.08.11-9.93 12.07a1 1 0 01-1.33.19l-.1-.05-6.07-5.38A1 1 0 014.56 12l.1.08L10 16.79z"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20.24 3.76a2.32 2.32 0 00-3.33 0L12 8.67l-5-5A2.35 2.35 0 003.7 7l5 5-5 5A2.35 2.35 0 007 20.3l5-5 5 5a2.35 2.35 0 003.3-3.3l-5-5 5-5a2.3 2.3 0 00-.06-3.24z"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2a1 1 0 010 2.09A7.91 7.91 0 1019.91 12 1 1 0 0122 12 10 10 0 1112 2z"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 6.14a1.05 1.05 0 011.5 0l4.21 5.27a1 1 0 010 1.5l-4.21 4.95a1 1 0 01-1.47 0 1.05 1.05 0 010-1.5l3.45-4.22L16 7.64a1.05 1.05 0 010-1.5zm-10.81 5a1.06 1.06 0 010 2.11H3.05a1.06 1.06 0 010-2.11h2.11zm5.26 0a1.06 1.06 0 010 2.11H8.32a1.06 1.06 0 110-2.11h2.1zm5.26 0a1.06 1.06 0 110 2.11h-2.1a1.06 1.06 0 010-2.11h2.1z"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
      fill-rule="evenodd"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12,2 C12.5522847,2 13,2.44771525 13,3 L13,11 L21,11 C21.5522847,11 22,11.4477153 22,12 C22,12.5522847 21.5522847,13 21,13 L13,13 L13,21 C13,21.5522847 12.5522847,22 12,22 C11.4477153,22 11,21.5522847 11,21 L11,13 L3,13 C2.44771525,13 2,12.5522847 2,12 C2,11.4477153 2.44771525,11 3,11 L11,11 L11,3 C11,2.44771525 11.4477153,2 12,2 Z"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12,3 C12.5522847,3 13,3.44771525 13,4 L13,20 C13,20.5522847 12.5522847,21 12,21 C11.4477153,21 11,20.5522847 11,20 L11,4 C11,3.44771525 11.4477153,3 12,3 Z"
      transform="rotate(90 12 12)"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="6"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="2.5"
      rx=".3"
      width="14"
      x="5"
      y="10.75"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18.3986407,7.65510741 L12,13.8300075 L5.60135725,7.65510546 C5.14150935,7.21129876 4.43778366,7.25756618 4.03031254,7.7552821 C3.62357936,8.25209663 3.66385814,9.01317255 4.12257613,9.45588874 L11.2606084,16.34492 C11.6820987,16.7517071 12.3179013,16.7517071 12.7393916,16.34492 L19.8774239,9.45588874 C20.3361419,9.01317255 20.3764206,8.25209663 19.9696875,7.7552821 C19.5622163,7.25756619 18.8584907,7.21129876 18.3986407,7.65510741 Z"
      transform="rotate(90 12 12)"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18.3986407,7.65510741 L12,13.8300075 L5.60135725,7.65510546 C5.14150935,7.21129876 4.43778366,7.25756618 4.03031254,7.7552821 C3.62357936,8.25209663 3.66385814,9.01317255 4.12257613,9.45588874 L11.2606084,16.34492 C11.6820987,16.7517071 12.3179013,16.7517071 12.7393916,16.34492 L19.8774239,9.45588874 C20.3361419,9.01317255 20.3764206,8.25209663 19.9696875,7.7552821 C19.5622163,7.25756619 18.8584907,7.21129876 18.3986407,7.65510741 Z"
      transform="matrix(0 1 1 0 0 0)"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22.005,5.33 L22.005,10.3325 C22.005,10.7910625 21.6298125,11.16625 21.17125,11.16625 L16.16875,11.16625 C15.7101875,11.16625 15.335,10.7910625 15.335,10.3325 C15.335,9.8739375 15.7101875,9.49875 16.16875,9.49875 L18.9826562,9.49875 C17.8570937,8.414875 16.9816562,7.5394375 16.7315312,7.2893125 C16.7315312,7.2893125 16.7315312,7.2893125 16.7315312,7.2893125 C16.085375,6.64315625 15.3558437,6.16375 14.5220937,5.83025 C13.7300312,5.49675 12.8754375,5.35084375 12.0208437,5.35084375 C11.16625,5.35084375 10.3116562,5.51759375 9.51959375,5.83025 C8.68584375,6.16375 7.9563125,6.664 7.31015625,7.2893125 C7.247625,7.35184375 7.2059375,7.39353125 7.14340625,7.4560625 C6.60146875,8.01884375 6.18459375,8.68584375 5.89278125,9.39453125 C5.85109375,9.51959375 5.7885625,9.64465625 5.746875,9.7905625 C5.60096875,10.2282813 5.1215625,10.4575625 4.68384375,10.2908125 C4.246125,10.1449063 4.01684375,9.6655 4.16275,9.22778125 C4.22528125,9.0401875 4.2878125,8.8734375 4.3711875,8.68584375 C4.5379375,8.31065625 4.72553125,7.93546875 4.9548125,7.581125 C5.22578125,7.14340625 5.55928125,6.7056875 5.913625,6.3305 C5.97615625,6.26796875 6.05953125,6.18459375 6.1220625,6.1220625 C6.914125,5.33 7.85209375,4.7046875 8.8734375,4.2878125 C9.3736875,4.079375 9.89478125,3.93346875 10.415875,3.82925 C10.9369688,3.7041875 11.4580625,3.6625 12,3.6625 C12.5419375,3.6625 13.0630312,3.7041875 13.584125,3.80840625 C14.1052187,3.912625 14.6263125,4.05853125 15.1265625,4.26696875 C16.16875,4.68384375 17.085875,5.30915625 17.8779375,6.10121875 L17.8987812,6.1220625 C18.16975,6.39303125 19.1285625,7.331 20.3375,8.49825 L20.3375,5.33 C20.3375,4.8714375 20.7126875,4.49625 21.17125,4.49625 C21.6298125,4.49625 22.005,4.8714375 22.005,5.33 Z M2.82875,19.50375 C3.2873125,19.50375 3.6625,19.1285625 3.6625,18.67 L3.6625,15.50175 C4.8714375,16.669 5.83025,17.6069688 6.10121875,17.8779375 L6.1220625,17.8987813 C6.914125,18.6908438 7.85209375,19.3161563 8.8734375,19.7330313 C9.3736875,19.9414688 9.89478125,20.087375 10.415875,20.1915938 C10.9369687,20.2958125 11.4789062,20.3375 12,20.3375 C13.0630312,20.3375 14.1469062,20.1290625 15.1265625,19.7330313 C16.16875,19.3161563 17.085875,18.6908438 17.8779375,17.8987813 C17.9404687,17.83625 18.0238437,17.752875 18.086375,17.6903438 C18.4407187,17.2943125 18.7742187,16.8774375 19.0451875,16.4397188 C19.2744687,16.085375 19.4620625,15.7101875 19.6288125,15.335 C19.7121875,15.16825 19.7747187,14.9806563 19.83725,14.7930625 C19.9831562,14.3553438 19.753875,13.8967813 19.3161562,13.7300313 C18.8784375,13.584125 18.3990312,13.8134063 18.253125,14.2302813 C18.2114375,14.3553438 18.1489062,14.4804063 18.1072187,14.6263125 C17.419375,16.2312813 16.1062188,17.5444375 14.4804062,18.1905938 C13.6883437,18.5240938 12.83375,18.67 11.9791562,18.67 C11.1245625,18.67 10.2699688,18.50325 9.47790625,18.1905938 C8.64415625,17.8570938 7.914625,17.3568438 7.26846875,16.7315313 C7.26846875,16.7315313 7.26846875,16.7315313 7.26846875,16.7315313 C7.01834375,16.4814063 6.1220625,15.6059688 5.01734375,14.5220938 L7.83125,14.5220938 C8.2898125,14.5220938 8.665,14.1469063 8.665,13.6883438 C8.665,13.2297813 8.2898125,12.8545938 7.83125,12.8545938 L2.82875,12.8545938 C2.3701875,12.8545938 1.995,13.2297813 1.995,13.6883438 L1.995,18.6908438 C1.995,19.1285625 2.3701875,19.50375 2.82875,19.50375 Z"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20.5757143,5.80642857 L16.7642857,5.80642857 L16.7642857,4.85357143 C16.7642857,3.28135714 15.4779286,1.995 13.9057143,1.995 L10.0942857,1.995 C8.52207143,1.995 7.23571429,3.28135714 7.23571429,4.85357143 L7.23571429,5.80642857 L3.42428571,5.80642857 C2.90021429,5.80642857 2.47142857,6.23521429 2.47142857,6.75928571 C2.47142857,7.28335714 2.90021429,7.71214286 3.42428571,7.71214286 L4.37714286,7.71214286 L4.37714286,19.1464286 C4.37714286,20.7186429 5.6635,22.005 7.23571429,22.005 L16.7642857,22.005 C18.3365,22.005 19.6228571,20.7186429 19.6228571,19.1464286 L19.6228571,7.71214286 L20.5757143,7.71214286 C21.0997857,7.71214286 21.5285714,7.28335714 21.5285714,6.75928571 C21.5285714,6.23521429 21.0997857,5.80642857 20.5757143,5.80642857 Z M9.14142857,4.85357143 C9.14142857,4.3295 9.57021429,3.90071429 10.0942857,3.90071429 L13.9057143,3.90071429 C14.4297857,3.90071429 14.8585714,4.3295 14.8585714,4.85357143 L14.8585714,5.80642857 L9.14142857,5.80642857 L9.14142857,4.85357143 Z M17.7171429,19.1464286 C17.7171429,19.6705 17.2883571,20.0992857 16.7642857,20.0992857 L7.23571429,20.0992857 C6.71164286,20.0992857 6.28285714,19.6705 6.28285714,19.1464286 L6.28285714,7.71214286 L17.7171429,7.71214286 L17.7171429,19.1464286 Z"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12,5.113375 C16.3931059,5.113375 20.2732712,7.71270816 21.9802983,11.652953 L22.1407558,12.0419876 L22.0956387,12.153878 C20.4516101,16.2310689 16.4710302,18.97 12,18.97 C7.6379147,18.97 3.75396181,16.3617817 2.02219041,12.4314959 L1.90488212,12.1551611 L1.8586406,12.041991 L1.90466997,11.9287345 C3.56874922,7.83422376 7.52579652,5.113375 12,5.113375 Z M12,7.02653125 C8.60847887,7.02653125 5.55841094,8.93677822 4.02311105,11.9060826 L3.956,12.041 L4.02296185,12.1752361 C5.51515627,15.0426131 8.43451388,16.9229468 11.7020245,17.0310742 L12,17.036 C15.4115147,17.036 18.4622567,15.1256865 19.9779748,12.1577876 L20.044,12.021 L19.9770381,11.8872952 C18.4848437,9.01991819 15.5654861,7.13958449 12.2979755,7.03145706 L12,7.02653125 Z M12,8.19825 C14.1249979,8.19825 15.8434375,9.91668958 15.8434375,12.0416875 C15.8434375,14.1666854 14.1249979,15.885125 12,15.885125 C9.87500208,15.885125 8.1565625,14.1666854 8.1565625,12.0416875 C8.1565625,9.91668958 9.87500208,8.19825 12,8.19825 Z M12,10.13225 C10.9490916,10.13225 10.0905625,10.9852043 10.0905625,12.0416875 C10.0905625,13.1057833 10.9359042,13.951125 12,13.951125 C13.0640958,13.951125 13.9094375,13.1057833 13.9094375,12.0416875 C13.9094375,10.9775917 13.0640958,10.13225 12,10.13225 Z"
    />
  </svg>
</div>
`;

exports[`SvgIcon demo -- svgIcon-type 1`] = `
.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

<div>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.23 5.52a1 1 0 011.62 1.16l-.08.11-9.93 12.07a1 1 0 01-1.33.19l-.1-.05-6.07-5.38A1 1 0 014.56 12l.1.08L10 16.79z"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20.24 3.76a2.32 2.32 0 00-3.33 0L12 8.67l-5-5A2.35 2.35 0 003.7 7l5 5-5 5A2.35 2.35 0 007 20.3l5-5 5 5a2.35 2.35 0 003.3-3.3l-5-5 5-5a2.3 2.3 0 00-.06-3.24z"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2a1 1 0 010 2.09A7.91 7.91 0 1019.91 12 1 1 0 0122 12 10 10 0 1112 2z"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 6.14a1.05 1.05 0 011.5 0l4.21 5.27a1 1 0 010 1.5l-4.21 4.95a1 1 0 01-1.47 0 1.05 1.05 0 010-1.5l3.45-4.22L16 7.64a1.05 1.05 0 010-1.5zm-10.81 5a1.06 1.06 0 010 2.11H3.05a1.06 1.06 0 010-2.11h2.11zm5.26 0a1.06 1.06 0 010 2.11H8.32a1.06 1.06 0 110-2.11h2.1zm5.26 0a1.06 1.06 0 110 2.11h-2.1a1.06 1.06 0 010-2.11h2.1z"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
      fill-rule="evenodd"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12,2 C12.5522847,2 13,2.44771525 13,3 L13,11 L21,11 C21.5522847,11 22,11.4477153 22,12 C22,12.5522847 21.5522847,13 21,13 L13,13 L13,21 C13,21.5522847 12.5522847,22 12,22 C11.4477153,22 11,21.5522847 11,21 L11,13 L3,13 C2.44771525,13 2,12.5522847 2,12 C2,11.4477153 2.44771525,11 3,11 L11,11 L11,3 C11,2.44771525 11.4477153,2 12,2 Z"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12,3 C12.5522847,3 13,3.44771525 13,4 L13,20 C13,20.5522847 12.5522847,21 12,21 C11.4477153,21 11,20.5522847 11,20 L11,4 C11,3.44771525 11.4477153,3 12,3 Z"
      transform="rotate(90 12 12)"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="6"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="2.5"
      rx=".3"
      width="14"
      x="5"
      y="10.75"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18.3986407,7.65510741 L12,13.8300075 L5.60135725,7.65510546 C5.14150935,7.21129876 4.43778366,7.25756618 4.03031254,7.7552821 C3.62357936,8.25209663 3.66385814,9.01317255 4.12257613,9.45588874 L11.2606084,16.34492 C11.6820987,16.7517071 12.3179013,16.7517071 12.7393916,16.34492 L19.8774239,9.45588874 C20.3361419,9.01317255 20.3764206,8.25209663 19.9696875,7.7552821 C19.5622163,7.25756619 18.8584907,7.21129876 18.3986407,7.65510741 Z"
      transform="rotate(90 12 12)"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18.3986407,7.65510741 L12,13.8300075 L5.60135725,7.65510546 C5.14150935,7.21129876 4.43778366,7.25756618 4.03031254,7.7552821 C3.62357936,8.25209663 3.66385814,9.01317255 4.12257613,9.45588874 L11.2606084,16.34492 C11.6820987,16.7517071 12.3179013,16.7517071 12.7393916,16.34492 L19.8774239,9.45588874 C20.3361419,9.01317255 20.3764206,8.25209663 19.9696875,7.7552821 C19.5622163,7.25756619 18.8584907,7.21129876 18.3986407,7.65510741 Z"
      transform="matrix(0 1 1 0 0 0)"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22.005,5.33 L22.005,10.3325 C22.005,10.7910625 21.6298125,11.16625 21.17125,11.16625 L16.16875,11.16625 C15.7101875,11.16625 15.335,10.7910625 15.335,10.3325 C15.335,9.8739375 15.7101875,9.49875 16.16875,9.49875 L18.9826562,9.49875 C17.8570937,8.414875 16.9816562,7.5394375 16.7315312,7.2893125 C16.7315312,7.2893125 16.7315312,7.2893125 16.7315312,7.2893125 C16.085375,6.64315625 15.3558437,6.16375 14.5220937,5.83025 C13.7300312,5.49675 12.8754375,5.35084375 12.0208437,5.35084375 C11.16625,5.35084375 10.3116562,5.51759375 9.51959375,5.83025 C8.68584375,6.16375 7.9563125,6.664 7.31015625,7.2893125 C7.247625,7.35184375 7.2059375,7.39353125 7.14340625,7.4560625 C6.60146875,8.01884375 6.18459375,8.68584375 5.89278125,9.39453125 C5.85109375,9.51959375 5.7885625,9.64465625 5.746875,9.7905625 C5.60096875,10.2282813 5.1215625,10.4575625 4.68384375,10.2908125 C4.246125,10.1449063 4.01684375,9.6655 4.16275,9.22778125 C4.22528125,9.0401875 4.2878125,8.8734375 4.3711875,8.68584375 C4.5379375,8.31065625 4.72553125,7.93546875 4.9548125,7.581125 C5.22578125,7.14340625 5.55928125,6.7056875 5.913625,6.3305 C5.97615625,6.26796875 6.05953125,6.18459375 6.1220625,6.1220625 C6.914125,5.33 7.85209375,4.7046875 8.8734375,4.2878125 C9.3736875,4.079375 9.89478125,3.93346875 10.415875,3.82925 C10.9369688,3.7041875 11.4580625,3.6625 12,3.6625 C12.5419375,3.6625 13.0630312,3.7041875 13.584125,3.80840625 C14.1052187,3.912625 14.6263125,4.05853125 15.1265625,4.26696875 C16.16875,4.68384375 17.085875,5.30915625 17.8779375,6.10121875 L17.8987812,6.1220625 C18.16975,6.39303125 19.1285625,7.331 20.3375,8.49825 L20.3375,5.33 C20.3375,4.8714375 20.7126875,4.49625 21.17125,4.49625 C21.6298125,4.49625 22.005,4.8714375 22.005,5.33 Z M2.82875,19.50375 C3.2873125,19.50375 3.6625,19.1285625 3.6625,18.67 L3.6625,15.50175 C4.8714375,16.669 5.83025,17.6069688 6.10121875,17.8779375 L6.1220625,17.8987813 C6.914125,18.6908438 7.85209375,19.3161563 8.8734375,19.7330313 C9.3736875,19.9414688 9.89478125,20.087375 10.415875,20.1915938 C10.9369687,20.2958125 11.4789062,20.3375 12,20.3375 C13.0630312,20.3375 14.1469062,20.1290625 15.1265625,19.7330313 C16.16875,19.3161563 17.085875,18.6908438 17.8779375,17.8987813 C17.9404687,17.83625 18.0238437,17.752875 18.086375,17.6903438 C18.4407187,17.2943125 18.7742187,16.8774375 19.0451875,16.4397188 C19.2744687,16.085375 19.4620625,15.7101875 19.6288125,15.335 C19.7121875,15.16825 19.7747187,14.9806563 19.83725,14.7930625 C19.9831562,14.3553438 19.753875,13.8967813 19.3161562,13.7300313 C18.8784375,13.584125 18.3990312,13.8134063 18.253125,14.2302813 C18.2114375,14.3553438 18.1489062,14.4804063 18.1072187,14.6263125 C17.419375,16.2312813 16.1062188,17.5444375 14.4804062,18.1905938 C13.6883437,18.5240938 12.83375,18.67 11.9791562,18.67 C11.1245625,18.67 10.2699688,18.50325 9.47790625,18.1905938 C8.64415625,17.8570938 7.914625,17.3568438 7.26846875,16.7315313 C7.26846875,16.7315313 7.26846875,16.7315313 7.26846875,16.7315313 C7.01834375,16.4814063 6.1220625,15.6059688 5.01734375,14.5220938 L7.83125,14.5220938 C8.2898125,14.5220938 8.665,14.1469063 8.665,13.6883438 C8.665,13.2297813 8.2898125,12.8545938 7.83125,12.8545938 L2.82875,12.8545938 C2.3701875,12.8545938 1.995,13.2297813 1.995,13.6883438 L1.995,18.6908438 C1.995,19.1285625 2.3701875,19.50375 2.82875,19.50375 Z"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20.5757143,5.80642857 L16.7642857,5.80642857 L16.7642857,4.85357143 C16.7642857,3.28135714 15.4779286,1.995 13.9057143,1.995 L10.0942857,1.995 C8.52207143,1.995 7.23571429,3.28135714 7.23571429,4.85357143 L7.23571429,5.80642857 L3.42428571,5.80642857 C2.90021429,5.80642857 2.47142857,6.23521429 2.47142857,6.75928571 C2.47142857,7.28335714 2.90021429,7.71214286 3.42428571,7.71214286 L4.37714286,7.71214286 L4.37714286,19.1464286 C4.37714286,20.7186429 5.6635,22.005 7.23571429,22.005 L16.7642857,22.005 C18.3365,22.005 19.6228571,20.7186429 19.6228571,19.1464286 L19.6228571,7.71214286 L20.5757143,7.71214286 C21.0997857,7.71214286 21.5285714,7.28335714 21.5285714,6.75928571 C21.5285714,6.23521429 21.0997857,5.80642857 20.5757143,5.80642857 Z M9.14142857,4.85357143 C9.14142857,4.3295 9.57021429,3.90071429 10.0942857,3.90071429 L13.9057143,3.90071429 C14.4297857,3.90071429 14.8585714,4.3295 14.8585714,4.85357143 L14.8585714,5.80642857 L9.14142857,5.80642857 L9.14142857,4.85357143 Z M17.7171429,19.1464286 C17.7171429,19.6705 17.2883571,20.0992857 16.7642857,20.0992857 L7.23571429,20.0992857 C6.71164286,20.0992857 6.28285714,19.6705 6.28285714,19.1464286 L6.28285714,7.71214286 L17.7171429,7.71214286 L17.7171429,19.1464286 Z"
    />
  </svg>
  <svg
    class=" emotion-0 emotion-1"
    style="margin-right:10px"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12,5.113375 C16.3931059,5.113375 20.2732712,7.71270816 21.9802983,11.652953 L22.1407558,12.0419876 L22.0956387,12.153878 C20.4516101,16.2310689 16.4710302,18.97 12,18.97 C7.6379147,18.97 3.75396181,16.3617817 2.02219041,12.4314959 L1.90488212,12.1551611 L1.8586406,12.041991 L1.90466997,11.9287345 C3.56874922,7.83422376 7.52579652,5.113375 12,5.113375 Z M12,7.02653125 C8.60847887,7.02653125 5.55841094,8.93677822 4.02311105,11.9060826 L3.956,12.041 L4.02296185,12.1752361 C5.51515627,15.0426131 8.43451388,16.9229468 11.7020245,17.0310742 L12,17.036 C15.4115147,17.036 18.4622567,15.1256865 19.9779748,12.1577876 L20.044,12.021 L19.9770381,11.8872952 C18.4848437,9.01991819 15.5654861,7.13958449 12.2979755,7.03145706 L12,7.02653125 Z M12,8.19825 C14.1249979,8.19825 15.8434375,9.91668958 15.8434375,12.0416875 C15.8434375,14.1666854 14.1249979,15.885125 12,15.885125 C9.87500208,15.885125 8.1565625,14.1666854 8.1565625,12.0416875 C8.1565625,9.91668958 9.87500208,8.19825 12,8.19825 Z M12,10.13225 C10.9490916,10.13225 10.0905625,10.9852043 10.0905625,12.0416875 C10.0905625,13.1057833 10.9359042,13.951125 12,13.951125 C13.0640958,13.951125 13.9094375,13.1057833 13.9094375,12.0416875 C13.9094375,10.9775917 13.0640958,10.13225 12,10.13225 Z"
    />
  </svg>
</div>
`;
